lightbox implemented in first section

--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
 
     <!-- Links -->
 
+    <img class="align posterlightbox" src="media/poster01.jpg" alt="">
 
     <br><br><br><br>
+
 <hr class="lang">
+
+
 
 </section>
 
