--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- Poster -->
    <div class="align">
-        <img id="titelbild" src="media/collage.png" alt="">
+        <img id="titelbild" src="media/collage.png" alt="Collage eines Tiefseeschwammes und dessen Mikroben">
     </div>
 
     <!-- postertext -->
@@ -61,7 +61,7 @@
 
     <!-- Links -->
 
-    <img class="align posterlightbox" src="media/poster01.jpg" alt="">
+    <img class="align posterlightbox" src="media/poster01.jpg" alt="Poster anzeigen">
 
     <br><br><br><br>
 
@@ -91,7 +91,7 @@
 
 
     <div class="align">
-        <img class="imgposter" src="media/grafiken/weltkarteverteilung.jpg" alt=""
+        <img class="imgposter" src="media/grafiken/weltkarteverteilung.jpg" alt="Karte mit der weltweiten Schwammverbreitung"
 
         >
     </div>
@@ -161,7 +161,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     </div>
 
     <div class="align">
-        <img class="imgposter" src="media/grafiken/schwammgrund.png" alt="">
+        <img class="imgposter" src="media/grafiken/schwammgrund.png" alt="Illustration eines Schwammgrunds mit unterschiedlichen Meerestieren">
     </div>
 
 
@@ -228,7 +228,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     <br><br><br>
 
     <div class="align">
-        <img class="imgposter" src="media/grafiken/schwammnadeln.png" alt="">
+        <img class="imgposter" src="media/grafiken/schwammnadeln.png" alt="Fotografie eines Tiefseeschwammes">
     </div>
 
  <br/>
@@ -272,7 +272,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     <br><br><br>
 
     <div class="align">
-        <img class="imgposter" src="media/grafiken/diversitaet.png" alt="">
+        <img class="imgposter" src="media/grafiken/diversitaet.png" alt="Fotos von Schwämmen verschiedener Arten">
     </div>
 
 
@@ -323,7 +323,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     </div>
 
     <div class="align">
-        <img class="imgposter"  src="media/grafiken/mikrobenwolke.png" alt="">
+        <img class="imgposter"  src="media/grafiken/mikrobenwolke.png" alt="Illustration einer Wolke aus vielen kleinen Mikroben">
     </div>
     
     <div class="align"><details class="zitatdetails"><summary class="zitatsummary">"Tiefseeschwämme beherbergen eine Gemeinschaft symbiotischer Mikroorganismen (z. B. Bakterien, Viren, Pilze), die als Mikrobiom </summary> bezeichnet werden und nicht nur auf Artebene, sondern auch auf individueller Ebene spezifisch sind."</details>
@@ -381,7 +381,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
 
 
     <div class="align">
-        <img class="imgposter" src="media/grafiken/mikrobenfunktion.png" alt="">
+        <img class="imgposter" src="media/grafiken/mikrobenfunktion.png" alt="Infografik über die Zusammenarbeit von Schwämmen und Mikroben">
     </div>
 
    
@@ -468,7 +468,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     </div>
 
     <div class="align">
-        <img class="imgposter" src="media/grafiken/HMA.png" alt="">
+        <img class="imgposter" src="media/grafiken/HMA.png" alt="Infografik des Stammbaums der bisher erforschten Bakterienstämme">
     </div>
 
 
@@ -539,7 +539,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     </div>
 
     <div class="align">
-        <img class="imgposter"  src="media/grafiken/stillerstress.png" alt="">
+        <img class="imgposter"  src="media/grafiken/stillerstress.png" alt="Graph über einer Schwammgrundillustration, der die Erwärmung, Versauerung und das Abnehmen des Sauerstoffgehalts im Meereswasser darstellt">
     </div>
    
     <div class="align"><details class="zitatdetails"><summary class="zitatsummary">"Experimentell angewandte Bedingungen des Klimawandels deuten darauf hin, dass zukünftige Ozeanbedingungen negative Auswirkungen anderer Stressoren </summary> auf Tiefseeschwämme, wie etwa die Exposition gegenüber Sedimenten, verschlimmern können.
@@ -603,7 +603,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     </div>
 
     <div class="align">
-        <img class="imgposter" src="media/grafiken/direkteeinfluesse.png" alt="">
+        <img class="imgposter" src="media/grafiken/direkteeinfluesse.png" alt="Illustration eines Geräts für den Tiefseebergbau und ein Schleppnetz über einem Schwammgrund">
     </div>
 
 
@@ -675,7 +675,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     </div>
 
     <div class="align">
-        <img class="imgposter" src="media/grafiken/methoden.png" alt="">
+        <img class="imgposter" src="media/grafiken/methoden.png" alt="Infografik über die Forschungsmethoden">
     </div>
 
     <div class="align">
