--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     <div class="align">
         <h1>Glossar</h1></div>
 
- <div class="align"><p>Das Glossar erklärt Begriff aus der Tiefseeforschung aus unterschiedlichen Perspektiven. Die blau hinterlegten Erklärungen stammen aus der Meeresbiologie , die gelb hinterlegten versuchen die Begriffe aus einer sozilogischen Sicht zu definieren.</p></div>
+ <div class="align"><p>Das Glossar erklärt Begriffe aus der Tiefseeforschung aus unterschiedlichen Perspektiven. Die blau hinterlegten Erklärungen stammen aus der Meeresbiologie , die gelb hinterlegten versuchen die Begriffe aus einer soziologischen Sicht zu definieren.</p></div>
     </div>
 
     <div class="align">
