added lightbox feature to more sections

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
     <button class="buttonzitat"><span class="italic">Tiefseeschwammgründe sind wichtig.</span></button>
    </a></div>
    
+   <img class="align posterlightbox" src="media/poster02.jpg" alt="Poster anzeigen">
 
 </section>
 
@@ -194,6 +195,8 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
             <button class="buttonzitat"><span class="italic">Tiefseeschwammgründe stellen einen Lebensraum für die verschiedesten Fischarten dar.</span></button>
          </a>
     </div>
+
+    <img class="align posterlightbox" src="media/poster03.jpg" alt="Poster anzeigen">
 
 </section>
 
