deleted align class on posterlightbox eements

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- Links -->
 
-    <img class="align posterlightbox" src="media/poster01.jpg" alt="Poster anzeigen">
+    <img class="posterlightbox" src="media/poster01.jpg" alt="Poster anzeigen">
 
     <br><br><br><br>
 
@@ -134,7 +134,7 @@
     <button class="buttonzitat"><span class="italic">Tiefseeschwammgründe sind wichtig.</span></button>
    </a></div>
    
-   <img class="align posterlightbox" src="media/poster02.jpg" alt="Poster anzeigen">
+   <img class="posterlightbox" src="media/poster02.jpg" alt="Poster anzeigen">
 
 </section>
 
@@ -196,7 +196,7 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
          </a>
     </div>
 
-    <img class="align posterlightbox" src="media/poster03.jpg" alt="Poster anzeigen">
+    <img class="posterlightbox" src="media/poster03.jpg" alt="Poster anzeigen">
 
 </section>
 
