--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
 <div class="container">
 
+    <!-- Poster 1 -->
+
 <section class="poster" id="poster01">
 
     <!-- Überschrift -->
@@ -62,12 +64,10 @@
     <!-- Links -->
 
     <div class="vorschaucontainer">
-        <a href="media/poster01.jpg" data-lightbox="show-1" data-title="Poster 1">
+        <a href="media/poster01.jpg" data-lightbox="bild-1" data-title="Poster 1">
         <img class="vorschau" src="media/icon_poster.png" alt="Poster 1">
       </a>
-      <a href="media/poster01.jpg" data-lightbox="show-1" data-title="Poster 2">
-        <img class="vorschau" src="media/icon_video.png" alt="Poster 2">
-      </a>
+
 
     </div>
     
@@ -78,6 +78,8 @@
 
 </section>
 
+
+<!-- Poster 2 -->
 
 <section class="poster" id="poster02">
 
@@ -142,13 +144,9 @@
    </a></div>
    
    <div class="vorschaucontainer">
-    <a href="media/poster01.jpg" data-lightbox="show-1" data-title="Poster 1">
+    <a href="media/poster02.jpg" data-lightbox="bild-1" data-title="Poster 1">
     <img class="vorschau" src="media/icon_poster.png" alt="Poster 1">
   </a>
-  <a href="media/poster01.jpg" data-lightbox="show-1" data-title="Poster 2">
-    <img class="vorschau" src="media/icon_video.png" alt="Poster 2">
-  </a>
-
 </div> 
 
 </section>
@@ -157,6 +155,8 @@
 
 <hr class="kurz">
 
+
+<!-- Poster 3 -->
 
 <section class="poster" id="poster03">
 
@@ -212,14 +212,10 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     </div>
 
     <div class="vorschaucontainer">
-        <a href="media/poster01.jpg" data-lightbox="show-1" data-title="Poster 1">
-        <img class="vorschau" src="media/icon_poster.png" alt="Poster 1">
+        <a href="media/poster03.jpg" data-lightbox="bild-3" data-title="Poster 3">
+        <img class="vorschau" src="media/icon_poster.png" alt="Poster 3">
       </a>
-      <a href="media/poster01.jpg" data-lightbox="show-1" data-title="Poster 2">
-        <img class="vorschau" src="media/icon_video.png" alt="Poster 2">
-      </a>
-
-    </div>
+    </div> 
 
 </section>
 
@@ -227,6 +223,8 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
 
 <hr class="kurz">
 
+
+<!-- Poster 4 -->
 
 <section class="poster" id="poster04">
 
@@ -265,12 +263,20 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
         </a>
     </div>
 
+<div class="vorschaucontainer">
+    <a href="media/poster04.jpg" data-lightbox="bild-4" data-title="Poster 4">
+    <img class="vorschau" src="media/icon_poster.png" alt="Poster 4">
+  </a>
+</div> 
+
 </section>
 
 
 
 <hr class="kurz">
 
+
+<!-- Poster 5 -->
 
 <section class="poster" id="poster05">
     <div class="align">
@@ -319,10 +325,17 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
 
 </section>
 
-
+<div class="vorschaucontainer">
+    <a href="media/poster05.jpg" data-lightbox="bild-5" data-title="Poster 5">
+    <img class="vorschau" src="media/icon_poster.png" alt="Poster 5">
+  </a>
+</div> 
 
 <hr class="kurz">
 
+
+
+<!-- Poster 6 -->
 
 <section class="poster" id="poster06">
 
@@ -371,12 +384,19 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
      </a>
 </div>
 
+<div class="vorschaucontainer">
+    <a href="media/poster06.jpg" data-lightbox="bild-6" data-title="Poster 6">
+    <img class="vorschau" src="media/icon_poster.png" alt="Poster 6">
+  </a>
+</div> 
+
 </section>
-
-
 
 <hr class="kurz">
 
+
+
+<!-- Poster 7 -->
 
 <section class="poster" id="poster07">
 
@@ -463,11 +483,20 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
 </div>
 
 
+<div class="vorschaucontainer">
+    <a href="media/poster07.jpg" data-lightbox="bild-7" data-title="Poster 7">
+    <img class="vorschau" src="media/icon_poster.png" alt="Poster 7">
+  </a>
+</div> 
+
 </section>
 
 
 
 <hr class="kurz">
+
+
+<!-- Poster 8 -->
 
 
 <section class="poster" id="poster08">
@@ -529,12 +558,21 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
          </a>
     </div>
 
+
+    <div class="vorschaucontainer">
+        <a href="media/poster08.jpg" data-lightbox="bild-8" data-title="Poster 8">
+        <img class="vorschau" src="media/icon_poster.png" alt="Poster 8">
+      </a>
+    </div> 
+
 </section>
 
 
 
 <hr class="kurz">
 
+
+<!-- Poster 9 -->
 
 <section class="poster" id="poster09">
 
@@ -594,12 +632,20 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
     </div>
 
 
+    <div class="vorschaucontainer">
+        <a href="media/poster09.jpg" data-lightbox="bild-9" data-title="Poster 9">
+        <img class="vorschau" src="media/icon_poster.png" alt="Poster 9">
+      </a>
+    </div> 
+
 </section>
 
 
 
 <hr class="kurz">
 
+
+<!-- Poster 10 -->
 
 <section class="poster" id="poster10">
 
@@ -673,11 +719,20 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
          </a>
     </div>
 
+    <div class="vorschaucontainer">
+        <a href="media/poster10.jpg" data-lightbox="bild-10" data-title="Poster 10">
+        <img class="vorschau" src="media/icon_poster.png" alt="Poster 10">
+      </a>
+    </div> 
+
 </section>
 
 
 
 <hr class="kurz">
+
+
+<!-- Poster 11 -->
 
 
 <section class="poster" id="poster11">
@@ -725,13 +780,20 @@ Ansammlungen von Schwämmen in der Tiefsee. Dabei bieten sie, ähnlich den Wäld
          </a>
     </div>
 
+
+    <div class="vorschaucontainer">
+        <a href="media/poster11.jpg" data-lightbox="bild-11" data-title="Poster 11">
+        <img class="vorschau" src="media/icon_poster.png" alt="Poster 11">
+      </a>
+    </div> 
+
 </section>
 
 
 
 <hr class="kurz">
 
-
+<!-- Glossar -->
 
 <section id="glossar">
     
