--- a/index.html
+++ b/index.html
@@ -102,36 +102,36 @@
 
     <div class="align"><details class="zitatdetails"><summary class="zitatsummary">"Schwammböden oder Schwammansammlungen sind Lebensräume, durch große Dichten von Schwämmen gebildet werden, die entweder aus einer einzelnen Art oder aus gemischten</summary>  Artenansammlungen bestehen können. Es ist bekannt, dass sie in allen Tiefen und auf der ganzen Welt vorkommen. Ihre Ausdehnung kann von einigen Hundert m2 bis zu Hunderten von km2 reichen." </details>
         ></div>
-        <div class="align"> <p>➞ Policy Brief </p>
+        <div class="align"> <p>Policy Brief </p>
         
         </div>
         <div class="align">
         <a href="media/pdf/PolicyBrief4.pdf" target="_blank">
           <br>
-          <button class="buttonzitat"> <span class="italic"> The social and
+          <button class="buttonzitat"> <span class="italic">➞ The social and
             cultural value of deep–sea sponges</span></button>
         
         </a>
     </div>
  <br/>
-   <div class="align"> <p>➞ Wissenschaftliche Paper </p> 
+   <div class="align"> <p>Wissenschaftliche Paper </p> 
 
     </div>
    
 <div class="align">    <a href="media/pdf/paper/Roberts 2018.pdf" target="_blank" >
-    <button class="buttonzitat"><span class="italic">Wassermassen an einem Seeberg beeinflussen die räumliche Verteilung von Tiefseeschwämmen.</span></button>
+    <button class="buttonzitat"><span class="italic">➞ Wassermassen an einem Seeberg beeinflussen die räumliche Verteilung von Tiefseeschwämmen.</span></button>
   </a></div>
 
   <div class="align">    <a href="media/pdf/paper/Roberts 2021.pdf" target="_blank" >
-    <button class="buttonzitat"><span class="italic">Wassermassen beeinflussen die räumliche Verteilung von Tiefseeschwämmen im Nordatlantik.</span></button>
+    <button class="buttonzitat"><span class="italic">➞ Wassermassen beeinflussen die räumliche Verteilung von Tiefseeschwämmen im Nordatlantik.</span></button>
    </a></div>
 
    <div class="align">    <a href="media/pdf/paper/Steffen 2022.pdf" target="_blank" >
-    <button class="buttonzitat"><span class="italic">Wassermassen beeinflussen die bakteriellen Gemeinschaften und chemische Diversität in Tiefseeschwämmen.  </span></button>
+    <button class="buttonzitat"><span class="italic">➞ Wassermassen beeinflussen die bakteriellen Gemeinschaften und chemische Diversität in Tiefseeschwämmen.  </span></button>
    </a></div>
 
    <div class="align">    <a href="media/pdf/paper/in prep -SponGES_synthesis.pdf" target="_blank" >
-    <button class="buttonzitat"><span class="italic">Tiefseeschwammgründe sind wichtig.</span></button>
+    <button class="buttonzitat"><span class="italic">➞ Tiefseeschwammgründe sind wichtig.</span></button>
    </a></div>
    
 <img class="posterlightbox" src="media/poster02.jpg" alt="Poster anzeigen">   
